Add Nashorn dependency for JavaScript processing in runtime to facilitate Java upgrades